# cgal-public-dev

Barycentric_coordinates_2/: todo
Barycentric_coordinates_2/benchmark/Barycentric_coordinates_2/: CMakeLists.txt
Barycentric_coordinates_2/doc/Barycentric_coordinates_2/: Barycentric_coordinates_2.txt  Doxyfile.in  PackageDescription.txt  dependencies  examples.txt
Barycentric_coordinates_2/examples/Barycentric_coordinates_2/: CMakeLists.txt  Wachspress_coordinates.cpp  affine_coordinates.cpp  discrete_harmonic_coordinates.cpp  harmonic_coordinates.cpp  mean_value_coordinates.cpp  segment_coordinates.cpp  terrain_height_modeling.cpp  triangle_coordinates.cpp
Barycentric_coordinates_2/include/CGAL/: Barycentric_coordinates_2.h
Barycentric_coordinates_2/package_info/Barycentric_coordinates_2/: dependencies  long_description.txt  maintainer
Barycentric_coordinates_2/test/Barycentric_coordinates_2/: CMakeLists.txt
Classification/doc/Classification/: Classification.txt
Combinatorial_map/include/CGAL/: .clang-format  Cell_iterators.h  Combinatorial_map.h  Combinatorial_map_iterators_base.h  Combinatorial_map_storages.h  Dart.h  Dart_iterators.h  Mark_management.h
Documentation/doc/Documentation/: packages.txt
Point_set_3/doc/Point_set_3/: Point_set_3.txt
Point_set_processing_3/doc/Point_set_processing_3/: Point_set_processing_3.txt
Point_set_processing_3/include/CGAL/: structure_point_set.h
Shape_detection/: todo
Shape_detection/benchmark/Region_growing/: CMakeLists.txt  README.md  benchmark_region_growing_on_point_set_2.cpp  benchmark_region_growing_on_points_2.cpp
Shape_detection/benchmark/Shape_detection/: README.md  benchmark_region_growing_on_point_set_2.cpp  benchmark_region_growing_on_point_set_3.cpp
Shape_detection/doc/Shape_detection/: Doxyfile.in  PackageDescription.txt  Shape_detection.txt  dependencies  examples.txt
Shape_detection/examples/Shape_detection/: CMakeLists.txt  efficient_RANSAC_and_plane_regularization.cpp  efficient_RANSAC_basic.cpp  efficient_RANSAC_with_custom_shape.cpp  example_efficient_RANSAC_with_callback.cmd  example_efficient_RANSAC_with_callback.cpp  example_efficient_RANSAC_with_custom_shape.cpp  example_region_growing_on_point_set_2.cpp  (+4 more)
Shape_detection/test/Shape_detection/Efficient_RANSAC/: CMakeLists.txt  test_efficient_RANSAC_cone_connected_component.cpp  test_efficient_RANSAC_cone_parameters.cpp  test_efficient_RANSAC_cylinder_connected_component.cpp  test_efficient_RANSAC_cylinder_parameters.cpp  test_efficient_RANSAC_fake_traits_for_testing.h  test_efficient_RANSAC_plane_connected_component.cpp  test_efficient_RANSAC_plane_parameters.cpp  test_efficient_RANSAC_regularization.cpp  test_efficient_RANSAC_scene.cpp  test_efficient_RANSAC_sphere_connected_component.cpp  test_efficient_RANSAC_sphere_parameters.cpp  test_efficient_RANSAC_torus_connected_component.cpp  test_efficient_RANSAC_torus_parameters.cpp
Shape_detection/test/Shape_detection/Region_growing/: CMakeLists.txt  test_region_growing_on_cube.cpp  test_region_growing_on_face_graph.cpp  test_region_growing_on_point_set_2.cpp  test_region_growing_on_point_set_2_with_sorting.cpp  test_region_growing_on_point_set_3.cpp  test_region_growing_on_point_set_3_with_sorting.cpp  test_region_growing_on_points_2.cpp  test_region_growing_on_points_3.cpp  test_region_growing_on_polygon_mesh.cpp  test_region_growing_on_polygon_mesh_with_sorting.cpp  test_region_growing_on_polyhedron.cpp  test_region_growing_on_surface_mesh.cpp
(+218 files in other folders)
